# carkov

./: TODO.md  clean.sh  setup.cfg  tox.ini
carkov/: __init__.py  __main__.py  abstracts.py  chain.py  filters.py  serializer.py  utils.py
carkov/analyze/: abstract.py  english.py  words.py
typehints/: msgpack.pyi  nltk.pyi
