[metadata]
name = carkov
version = 0.1.1
description = A markov chainer library
author = Aldercone Studio
author_email = alderconestudio@gmail.com
keywords = text, markov, ebooks, chainer, generator, generative
long-description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE
license = BSD
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Artistic Software
    Topic :: Text Processing
    Topic :: Text Processing :: Linguistic

[options]
packages =
   carkov
   carkov.analyze
   
zip_safe = false
install_requires =
   python_version >= "3.6"
   unidecode
   nltk

[options.entry_points]
console_scripts =
   carkov = carkov.__main__:main
